--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         :  https://www.linkedin.com/in/jiwon-lee-1325aa325/
+  linkedin         : jiwon-lee-1325aa325
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
