--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Projects"
+  - title: "Research Projects"
     url: /talks/   
     
   - title: "Publications"
