--- a/_config.yml
+++ b/_config.yml
@@ -190,7 +190,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-markdown: CommonMarkGhPages
+markdown: Kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
