--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,3 +16,9 @@ main:
 
   - title: "Guide"
     url: /markdown/
+
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
