--- a/_config.yml
+++ b/_config.yml
@@ -76,11 +76,11 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
-    title: 'Books'
+    title: 'Submitted'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Published'    
   conferences:
-    title: 'Conference Papers'
+    title: 'Working'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
